# Simple-Drawing

./: CMakeLists.txt  LICENSE  resources.qrc
qml/: CreateCanvas.qml  main.qml
src/: main.cpp
src/Canvas/CanvasItem/: CanvasItem.cpp  CanvasItem.h
src/Canvas/CanvasManager/: CanvasManager.cpp  CanvasManager.h
src/GraphicObject/: GraphicObject.cpp  GraphicObject.h
src/GraphicObject/LineObject/: LineObject.cpp  LineObject.h
